k8s/temporal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temporal
  labels:
    app.kubernetes.io/managed-by: helm
